kubernetes-files/list-aws-resources/list-resources-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: tokigames-aws-resources-list
  name: tokigames-aws-resources-list
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: tokigames-aws-resources-list
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: tokigames-aws-resources-list
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: env
                operator: In
                values:
                - dev
      containers:
      - env:
        - name: BW_LOGLEVEL
          value: ERROR
        - name: BW_ENGINE_THREADCOUNT
          value: "8"
        - name: BW_ENGINE_STEPCOUNT
          value: "-1"
        - name: BW_APPLICATION_JOB_FLOWLIMIT
          value: "10" 
        image: 10.192.168.162:9595/get-api:latest
        imagePullPolicy: Never
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /_ping
            port: 7777
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        name: tokigames-aws-resources-list
        ports:
        - containerPort: 80
          name: tokigames-aws-resources-list
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /_ping
            port: 7777
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: nexus
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: tokigames-aws-resources-list
  name: tokigames-aws-resources-list
  
spec:
  ports:
  - name: service-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: tokigames-aws-resources-list
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
